--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,93 +78,26 @@
     <string name="login_failed">"Login failed"</string>
     <string name="your_answer">اكتب هنا</string>
     <string name="large_text">
-        "Material is the metaphor.\n\n"
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et cursus tortor. In facilisis dui ac quam vestibulum, eget fermentum risus tempor. In porttitor sem pulvinar lacus laoreet tempor. Ut vestibulum gravida scelerisque. Curabitur condimentum elit sit amet laoreet porta. Quisque sed fermentum lacus. Nunc tristique nisi id enim rutrum volutpat. Morbi eu facilisis mi. Vestibulum eu elit in augue placerat auctor. Aenean sodales lacus mauris, non suscipit massa auctor sit amet. Ut non dui tortor. Suspendisse egestas neque arcu, vitae porttitor est blandit id. Pellentesque porta malesuada dui, vitae imperdiet turpis feugiat non.
 
-        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
-        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
-        "technologically advanced and open to imagination and magic.\n"
-        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
-        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
-        "flexibility of the material creates new affordances that supercede those in the physical "
-        "world, without breaking the rules of physics.\n"
-        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
-        "interact, and exist in space and in relation to each other. Realistic lighting shows "
-        "seams, divides space, and indicates moving parts.\n\n"
+Vivamus eget nisl sit amet massa luctus ultrices. Donec ipsum orci, volutpat in iaculis quis, hendrerit condimentum mi. Sed a neque lectus. Sed varius, sapien ac sagittis interdum, tortor neque bibendum odio, ac egestas ligula lacus et velit. Vestibulum in turpis tellus. Duis tempor libero id euismod tempor. Sed sem orci, maximus sit amet placerat in, pulvinar in mauris. Nullam volutpat sed odio non gravida. Maecenas rhoncus est quis nisl lobortis venenatis. Fusce blandit enim aliquet, auctor tellus ut, ullamcorper elit. Proin dapibus volutpat magna in iaculis. Vestibulum tincidunt sed arcu sed rhoncus. Sed vel mollis eros. Donec nisl arcu, maximus eget mi a, scelerisque rutrum nibh. Phasellus vehicula, nisl in elementum tempus, est leo congue enim, id ultricies ex massa ut ante. Fusce facilisis lacus ac nulla commodo vestibulum.
 
-        "Bold, graphic, intentional.\n\n"
+Ut vulputate interdum dapibus. Suspendisse vitae massa sit amet mauris ullamcorper vulputate et ac lacus. Aenean aliquam interdum ante, faucibus tincidunt purus ornare non. Aenean ut mauris sed augue ultricies sollicitudin. Ut in ex elit. Donec at arcu ac lacus placerat pellentesque. Nulla facilisi. Morbi ultrices lacinia nulla, non dignissim libero rhoncus id. Aliquam elementum urna ac purus pulvinar, ac aliquam urna tempus.
 
-        "The foundational elements of print based design typography, grids, space, scale, color, "
-        "and use of imagery guide visual treatments. These elements do far more than please the "
-        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
-        "imagery, large scale typography, and intentional white space create a bold and graphic "
-        "interface that immerse the user in the experience.\n"
-        "An emphasis on user actions makes core functionality immediately apparent and provides "
-        "waypoints for the user.\n\n"
+Donec quis nulla nisi. Quisque eu arcu pulvinar, fermentum quam a, tristique mauris. Morbi tempus est et leo malesuada, ac suscipit turpis dignissim. Morbi sodales vitae magna et bibendum. Nam non velit elementum, viverra ex a, blandit nunc. Nulla consectetur in nisl sit amet dictum. Nam ac lorem nec mauris mattis sodales at vitae augue. Nunc lacinia tellus est, eu imperdiet diam lacinia sed. Etiam sed venenatis turpis, eget tincidunt velit. Integer ut blandit nisi.
 
-        "Motion provides meaning.\n\n"
+Nunc consectetur consectetur porttitor. Mauris semper lectus sed odio faucibus laoreet. Suspendisse pharetra tortor et leo fermentum, sed posuere justo auctor. In porttitor est sit amet tortor hendrerit, quis sagittis velit fringilla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus at nibh ac enim lobortis sodales sit amet vel felis. Etiam nec enim nulla. Vestibulum vehicula congue consectetur. Praesent pulvinar nibh dignissim nibh commodo malesuada. Aenean consequat ipsum quis massa ornare, ac convallis turpis luctus. Sed velit risus, maximus nec ante semper, euismod consectetur odio.
 
-        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
-        "inflection points that initiate motion, transforming the whole design.\n"
-        "All action takes place in a single environment. Objects are presented to the user without "
-        "breaking the continuity of experience even as they transform and reorganize.\n"
-        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
-        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et cursus tortor. In facilisis dui ac quam vestibulum, eget fermentum risus tempor. In porttitor sem pulvinar lacus laoreet tempor. Ut vestibulum gravida scelerisque. Curabitur condimentum elit sit amet laoreet porta. Quisque sed fermentum lacus. Nunc tristique nisi id enim rutrum volutpat. Morbi eu facilisis mi. Vestibulum eu elit in augue placerat auctor. Aenean sodales lacus mauris, non suscipit massa auctor sit amet. Ut non dui tortor. Suspendisse egestas neque arcu, vitae porttitor est blandit id. Pellentesque porta malesuada dui, vitae imperdiet turpis feugiat non.
 
-        "3D world.\n\n"
+Vivamus eget nisl sit amet massa luctus ultrices. Donec ipsum orci, volutpat in iaculis quis, hendrerit condimentum mi. Sed a neque lectus. Sed varius, sapien ac sagittis interdum, tortor neque bibendum odio, ac egestas ligula lacus et velit. Vestibulum in turpis tellus. Duis tempor libero id euismod tempor. Sed sem orci, maximus sit amet placerat in, pulvinar in mauris. Nullam volutpat sed odio non gravida. Maecenas rhoncus est quis nisl lobortis venenatis. Fusce blandit enim aliquet, auctor tellus ut, ullamcorper elit. Proin dapibus volutpat magna in iaculis. Vestibulum tincidunt sed arcu sed rhoncus. Sed vel mollis eros. Donec nisl arcu, maximus eget mi a, scelerisque rutrum nibh. Phasellus vehicula, nisl in elementum tempus, est leo congue enim, id ultricies ex massa ut ante. Fusce facilisis lacus ac nulla commodo vestibulum.
 
-        "The material environment is a 3D space, which means all objects have x, y, and z "
-        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
-        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
-        "position along the z-axis and has a standard 1dp thickness.\n"
-        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
-        "emulated by manipulating the y-axis.\n\n"
+Ut vulputate interdum dapibus. Suspendisse vitae massa sit amet mauris ullamcorper vulputate et ac lacus. Aenean aliquam interdum ante, faucibus tincidunt purus ornare non. Aenean ut mauris sed augue ultricies sollicitudin. Ut in ex elit. Donec at arcu ac lacus placerat pellentesque. Nulla facilisi. Morbi ultrices lacinia nulla, non dignissim libero rhoncus id. Aliquam elementum urna ac purus pulvinar, ac aliquam urna tempus.
 
-        "Light and shadow.\n\n"
+Donec quis nulla nisi. Quisque eu arcu pulvinar, fermentum quam a, tristique mauris. Morbi tempus est et leo malesuada, ac suscipit turpis dignissim. Morbi sodales vitae magna et bibendum. Nam non velit elementum, viverra ex a, blandit nunc. Nulla consectetur in nisl sit amet dictum. Nam ac lorem nec mauris mattis sodales at vitae augue. Nunc lacinia tellus est, eu imperdiet diam lacinia sed. Etiam sed venenatis turpis, eget tincidunt velit. Integer ut blandit nisi.
 
-        "Within the material environment, virtual lights illuminate the scene. Key lights create "
-        "directional shadows, while ambient light creates soft shadows from all angles.\n"
-        "Shadows in the material environment are cast by these two light sources. In Android "
-        "development, shadows occur when light sources are blocked by sheets of material at "
-        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
-        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
+Nunc consectetur consectetur porttitor. Mauris semper lectus sed odio faucibus laoreet. Suspendisse pharetra tortor et leo fermentum, sed posuere justo auctor. In porttitor est sit amet tortor hendrerit, quis sagittis velit fringilla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus at nibh ac enim lobortis sodales sit amet vel felis. Etiam nec enim nulla. Vestibulum vehicula congue consectetur. Praesent pulvinar nibh dignissim nibh commodo malesuada. Aenean consequat ipsum quis massa ornare, ac convallis turpis luctus. Sed velit risus, maximus nec ante semper, euismod consectetur odio.
 
-        "Resting elevation.\n\n"
-
-        "All material objects, regardless of size, have a resting elevation, or default elevation "
-        "that does not change. If an object changes elevation, it should return to its resting "
-        "elevation as soon as possible.\n\n"
-
-        "Component elevations.\n\n"
-
-        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
-        "does not vary from 6dp in one app to 16dp in another app).\n"
-        "Components may have different resting elevations across platforms, depending on the depth "
-        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
-
-        "Responsive elevation and dynamic elevation offsets.\n\n"
-
-        "Some component types have responsive elevation, meaning they change elevation in response "
-        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
-        "changes are consistently implemented using dynamic elevation offsets.\n"
-        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
-        "to the component’s resting state. They ensure that elevation changes are consistent "
-        "across actions and component types. For example, all components that lift on press have "
-        "the same elevation change relative to their resting elevation.\n"
-        "Once the input event is completed or cancelled, the component will return to its resting "
-        "elevation.\n\n"
-
-        "Avoiding elevation interference.\n\n"
-
-        "Components with responsive elevations may encounter other components as they move between "
-        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
-        "through other material, components avoid interfering with one another any number of ways, "
-        "whether on a per component basis or using the entire app layout.\n"
-        "On a component level, components can move or be removed before they cause interference. "
-        "For example, a floating action button (FAB) can disappear or move off screen before a "
-        "user picks up a card, or it can move if a snackbar appears.\n"
-        "On the layout level, design your app layout to minimize opportunities for interference. "
-        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
-        "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="title_activity_scrolling">ScrollingActivity</string>
     <string name="action_settings">Settings</string>
